--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -18,3 +18,33 @@ h1{
     justify-content: center;
     font-size:80px;
 }
+
+button{
+    background-color:black;
+    color:white;
+    border:2px white solid;
+    border-radius:50px;
+    text-align:center;
+    display:flex;
+    justify-content: center;
+    padding:10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    transition: all .2s ease-in-out;
+}
+
+.top{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left:20px;
+    margin-right:20px;
+}
+
+a{
+    text-decoration: none;
+    color:white;
+}
+
+button:hover{
+    transform: scale(1.2);
+}
