--- a/styles.css
+++ b/styles.css
@@ -157,5 +157,25 @@ ul{
     justify-content: center;
     align-items: center;
     margin-bottom:50px;
-    gap:10px
+    gap:10px;
+}
+
+.tinyIcon{
+    width: 20px;
+    height:20px;
+}
+
+.iconBackground{
+    border: solid white 2px;
+    border-radius: 20px;
+    padding:5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out .2s;
+}
+
+.iconBackground:hover{
+    background-color: white;
+    transform: scale(1.2);
 }
