--- a/styles.css
+++ b/styles.css
@@ -215,3 +215,34 @@ ul{
         color:white
     }
 }
+
+#footer{
+    background-color: black;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height:200px;
+    justify-content: center;
+    gap:10px;
+    align-items:center;
+}
+input{
+    width:300px;
+    height:30px;
+    border-radius: 10px;
+}
+#texts{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+#inputs{
+    display: flex;
+    gap:50px;
+    align-items: center;
+}
+#submit{
+    display: flex;
+    align-items: center;
+    height:40px
+}
