--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,7 @@ ul{
     justify-content: center;
     gap:10px;
     align-items:center;
+    padding-bottom: 50px;
 }
 input{
     width:300px;
@@ -246,7 +247,6 @@ input{
     align-items: center;
     height:40px
 }
-
 #confirm{
     width:200px;
     height:200px;
